# MachineLearning2025

./: 00.whatisSigmoid.py  01.gradientDescent_weight.py  01_Logistic_Regression_scratch_Iris.py  01_Logistic_regression_dogcat.ipynb  01_batchgradientDescent.ipynb  01_gradientDescent_weight.ipynb  01_gradientDescent_weight_bias.ipynb  01_linear-regression-using-gradient-descent.ipynb  01_regression.ipynb  02.gradientDescent_demo.ipynb  02.gradientDescent_demo.py  02.gradientDescent_weight_bias.ipynb  02.gradientDescent_weight_bias.py  03.batchgradientDescent.py  04.Logistic_Regression_scratch_Iris.py  04.Logistic_Regression_scratch_breast_cancer.py  04.Logistic_Regression_sklearn_iris2.py  04.Logistic_Regression_sklearn_iris3.py  04.Logistic_regression_dogcat_kaggle.ipynb  04_ensemble_learning_and_random_forests.ipynb  05.Cat_and_Dog_Pytorch_ANN.ipynb  05.Polynomial_Regression.py  05.Polynomial_Regression_overfitting.py  05.cat-dog-pytorch-cnn.ipynb  06.Early_stopping.py  07.ROC_AUC.py  07.kfold_StratifiedKFold.py  08.Lasso_Regression.py  08.Ridge_Regression.py  09.DBSCAN.ipynb  09.GMM.ipynb  09.Kmeans+SemiSupervisedLearning.ipynb  10.svm.py  10.svm2.py  10.svm_kernel.py  11.Decision_Tree.py  11.Decision_Tree_sklearn.py  11.Decision_Tree_sklearn_moon.py  11.Decision_Tree_sklearn_plot.py  12.LawofLargeNumber.py  (+63 more)
